order-reception/src/main/kotlin/com/example/orderreception/error/exception/IllegalMasterDataException.kt
package com.example.orderreception.error.exception

data class IllegalMasterDataException(val errorMessage: String) : Exception()